NEWS for vmdb2, the Debian disk image builder
=============================================================================

Version 0.19+git, not yet released
-----------------------------------------------------------------------------

* All use of the Python `cliapp` library has been dropped from vmdb2 now.


Version 0.19, released 2020-09-16
-----------------------------------------------------------------------------

Change in this release are entirely internal code changes that should
not affect users of vmdb2.

* Python Code has been formatted with the Black code formatting tool.

* Changes have been made towards dropping the dependency on the
  `cliapp` library: the Python standard library module `subprocess` is
  used instead of `cliapp.runcmd`, and the `cliapp` plugin system has
  been replaced with a custom one.


Version 0.18, released 2020-08-13
-----------------------------------------------------------------------------

* The way the manual was formatted could sometimes lead to different
  plugins' documentation being merged into the same section. This has
  now been fixed.


Version 0.17, released 2020-07-13
-----------------------------------------------------------------------------

* The luks plugin now runs the `cryptsetup` utility with the `-q`
  (alias for `--batch-mode`) option for batch mode, to prevent the
  utility from asking any questions of the user. Fix by Birger
  Schacht.


Version 0.16, released 2020-06-06
-----------------------------------------------------------------------------

* Progress output is now flushed after every write. This matters, when
  the output goes to a pipe, because then Python would buffer the
  output, meaning that progress output gets delayed until the buffer
  fills up, and that's useless.

* The documentation is now formatted using Subplot. Previously, the
  manual and the acceptance test suite were split into separate, but
  confusingly named files (vmdb2.md vs vmdb2.mdwn); now they are