@@ -22,6 +22,7 @@ vmdb/plugins/mklabel_plugin.py
 vmdb/plugins/mkpart_plugin.py
 vmdb/plugins/mount_plugin.py
 vmdb/plugins/qemudebootstrap_plugin.py
+vmdb/plugins/resize_plugin.py
 vmdb/plugins/shell_plugin.py
 vmdb/plugins/unpack_rootfs_plugin.py
 vmdb/plugins/vgcreate_plugin.py
